--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "1.0.2",
   "description": "A simple wrapper around knexJS",
   "main": "src/index.js",
+  "directories": {
+    "example": "examples"
+  },
+  "homepage": "https://github.com/studiowebux/webux-sql",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/studiowebux/webux-sql.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Studio Webux S.E.N.C",
-  "license": "MIT",
+  "license": "SEE LICENSE IN license.txt",
   "dependencies": {
     "knex": "^0.20.13"
   },
