--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "url": "https://github.com/studiowebux/webux-sql.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "lint": "eslint src/**",
+    "doc": "jsdoc src -d jsdoc/ "
   },
   "author": "Studio Webux S.E.N.C",
   "license": "SEE LICENSE IN license.txt",
@@ -20,6 +22,15 @@
     "knex": "^0.20.13"
   },
   "devDependencies": {
-    "pg": "^8.0.0"
+    "pg": "^8.0.0",
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "babel-jest": "^26.1.0",
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.18.0",
+    "jest": "^26.1.0",
+    "jsdoc": "^3.6.4"
   }
 }
