--- a/package.json
+++ b/package.json
@@ -19,10 +19,9 @@
   "author": "Studio Webux S.E.N.C",
   "license": "SEE LICENSE IN license.txt",
   "dependencies": {
-    "knex": "^0.20.13"
+    "knex": "^0.20.15"
   },
   "devDependencies": {
-    "pg": "^8.0.0",
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
     "babel-jest": "^26.1.0",
@@ -31,6 +30,7 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^23.18.0",
     "jest": "^26.1.0",
-    "jsdoc": "^3.6.4"
+    "jsdoc": "^3.6.4",
+    "pg": "^8.3.0"
   }
 }
